# AuraShell

./: README.md  RUN_AURASHELL.md  run_aurashell.bat  start_aurashell.ps1  test_aurashell.bat  test_commands.txt
AuraShell/: AUTO_BUILD_VOICE.bat  BUILD_AND_RUN_IN_CURSOR.md  BUILD_AUTO.bat  BUILD_INSTRUCTIONS.md  BUILD_VOICE.bat  CMakeLists.txt  FIX_SUMMARY.md  HOW_TO_RUN_VOICE.md  INSTALL_AND_BUILD.bat  QUICK_BUILD_AND_RUN.bat  QUICK_FIX.md  QUICK_START_VOICE.bat  REBUILD_NOW.bat  REBUILD_WITH_VOICE.bat  SIMPLE_REBUILD.bat  UPDATE_AND_RUN.bat  VOICE_FEATURE_README.md  WHY_NOT_WORKING.md  build.bat  build_and_run.bat  run_aurashell.bat
AuraShell/build_voice/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AuraShell.sln  AuraShell.vcxproj  AuraShell.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
AuraShell/build_voice/AuraShell.dir/Release/: AuraShell.exe.recipe
AuraShell/build_voice/AuraShell.dir/Release/AuraShell.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
AuraShell/build_voice/Release/: AuraShell.exe.old
AuraShell/build_voice/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
AuraShell/include/: alias.h  commands.h  history.h  parser.h  process.h  shell.h  theme.h  voice.h
AuraShell/src/: alias.c  commands.c  history.c  main.c  parser.c  process.c  shell.c  theme.c  voice.c
(+4 files in other folders)
